# cipherself

./: .gitignore  CONTRIBUTING.md  README.md  cipherself.py  collector.py  generator.py  pyproject.toml
src/cipher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cipher/analyzers/: personality.py  valuation.py
src/cipher/cli/: compare.py  demo.py  main.py  scan.py
src/cipher/collectors/: github.py  reddit.py  search.py
src/cipherself/: cli.py  config.py
src/cipherself.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cipherself/analyzer/: personality.py  reddit_personality.py  valuation.py
src/cipherself/collector/: github.py  reddit.py  search.py
src/cipherself/config/: __init__.py  valuation_rules.py
src/cipherself/generator/: pdf.py
tests/: README.md  test_cli.py
tests/manual_scripts/: test_apis.py  test_search_api.py
